<resources>
    <string name="app_name">MyPTApplication</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="dateTitle">Date</string>
    <string name="set_1Title">Set 1</string>
    <string name="set_2Title">Set 2</string>
    <string name="set_3Title">Set 3</string>
    <string name="sampleSetData">XX</string>
    <string name="sampleDateData">XX-XXX-XX</string>
    <string name="weightTitle">Weight:</string>
    <string name="sampleWeightData">XXkg</string>
    <string name="notesTitle">Notes:</string>
    <string name="lorem_ipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.</string>
    <string name="homeTitle">Home</string>
    <string name="recordTitle">Record</string>
    <string name="progressTitle">Progress</string>
    <string name="previous_logs">Previous Logs</string>
    <string name="mypt">myPT</string>
    <string name="start">START</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="kg">kg</string>
    <string name="save">SAVE</string>
    <string name="discard">Discard</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="reps">Reps:</string>
    <string name="set_no">Set No:</string>
    <string name="no_exercises">No Exercises Saved Yet…</string>
    <string name="default_web_client_id">104466847160-kvoa1f87j4ik4le9h38h7ctq9nticeda.apps.googleusercontent.com</string>
    <string name="no_exercise_data">Let\'s Get To Work!</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="end_button">END</string>

</resources>