<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView_dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTitle"
            app:layout_constraintEnd_toEndOf="@+id/textViewDate"
            app:layout_constraintStart_toStartOf="@+id/textViewDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_set1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/set_1Title"
            app:layout_constraintStart_toEndOf="@+id/textViewDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_set2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/set_2Title"
            app:layout_constraintEnd_toStartOf="@+id/textView_set3Title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_set3Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_3Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleDateData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_dateTitle" />

        <TextView
            android:id="@+id/textViewSet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleSetData"
            app:layout_constraintEnd_toEndOf="@+id/textView_set1Title"
            app:layout_constraintStart_toStartOf="@+id/textView_set1Title"
            app:layout_constraintTop_toBottomOf="@+id/textView_set1Title" />

        <TextView
            android:id="@+id/textViewSet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleSetData"
            app:layout_constraintEnd_toEndOf="@+id/textView_set2Title"
            app:layout_constraintStart_toStartOf="@+id/textView_set2Title"
            app:layout_constraintTop_toBottomOf="@+id/textView_set2Title" />

        <TextView
            android:id="@+id/textViewSet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleSetData"
            app:layout_constraintEnd_toEndOf="@+id/textView_set3Title"
            app:layout_constraintStart_toStartOf="@+id/textView_set3Title"
            app:layout_constraintTop_toBottomOf="@+id/textView_set3Title" />

        <TextView
            android:id="@+id/textView_weightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/weightTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sampleWeightData"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_weightTitle"
            app:layout_constraintStart_toEndOf="@+id/textView_weightTitle" />

        <TextView
            android:id="@+id/textView_notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notesTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_weightTitle" />

        <TextView
            android:id="@+id/textViewNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lorem_ipsum"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_notesTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_notesTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>