<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndRecordActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_drop_shadow"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/textView_exerciseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_type"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_currentDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow" />

    <TextView
        android:id="@+id/textView_currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow" />

    <TextView
        android:id="@+id/textView_enterWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/weightTitle"
        app:layout_constraintEnd_toStartOf="@+id/editText_weight"
        app:layout_constraintTop_toBottomOf="@+id/textView_currentDate" />

    <TextView
        android:id="@+id/textView_enterNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/notesTitle"
        app:layout_constraintEnd_toStartOf="@+id/editText_notes"
        app:layout_constraintTop_toBottomOf="@+id/textView_enterWeight" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_enterWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_weight"
        app:layout_constraintStart_toEndOf="@+id/editText_weight" />

    <EditText
        android:id="@+id/editText_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_notes"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_enterNotes"
        app:layout_constraintEnd_toStartOf="@+id/textView_kg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_weight" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_notes" />

    <Button
        android:id="@+id/button_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonBorder"
        android:textColor="?attr/colorPrimary"
        android:backgroundTint="?attr/colorSurface"
        android:layout_marginTop="32dp"
        android:text="@string/discard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />






</androidx.constraintlayout.widget.ConstraintLayout>