<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditExerciseLogActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@drawable/toolbar_drop_shadow"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="18dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <TextView
                android:id="@+id/textView_exerciseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_type"
                android:layout_marginTop="18dp"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_date" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_set1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/set_1Title"
                android:layout_marginEnd="64dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_set2"
                app:layout_constraintEnd_toStartOf="@+id/textView_set2" />

            <TextView
                android:id="@+id/textView_set2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_2Title"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_exerciseType" />

            <TextView
                android:id="@+id/textView_set3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/set_3Title"
                android:layout_marginStart="64dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_set2"
                app:layout_constraintStart_toEndOf="@+id/textView_set2" />

            <EditText
                android:id="@+id/editText_set1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textView_set1"
                app:layout_constraintStart_toStartOf="@+id/textView_set1"
                app:layout_constraintTop_toBottomOf="@+id/textView_set1" />

            <EditText
                android:id="@+id/editText_set2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textView_set2"
                app:layout_constraintStart_toStartOf="@+id/textView_set2"
                app:layout_constraintTop_toBottomOf="@+id/textView_set2" />

            <EditText
                android:id="@+id/editText_set3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textView_set3"
                app:layout_constraintStart_toStartOf="@+id/textView_set3"
                app:layout_constraintTop_toBottomOf="@+id/textView_set3" />

            <Button
                android:id="@+id/button_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonBorder"
                android:textColor="?attr/colorPrimary"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/discard"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:text="@string/save"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toTopOf="@+id/button_discard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="8dp"
                android:text="@string/weightTitle"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_set1" />

            <TextView
                android:id="@+id/textView_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:text="@string/notesTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

            <EditText
                android:id="@+id/editText_weight"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:layout_marginStart="8dp"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_weight"
                app:layout_constraintStart_toEndOf="@+id/textView_weight" />

            <EditText
                android:id="@+id/editText_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_notes"
                app:layout_constraintEnd_toEndOf="@+id/editText_weight"
                app:layout_constraintStart_toStartOf="@+id/editText_weight" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>